Fixed light scrollbar border.

--- a/style.css
+++ b/style.css
@@ -213,34 +213,25 @@
 .light_scrollbar slider {
  	background-color: rgba(16, 16, 16, 0.5);
     box-shadow:none;
-  	border: 1px;
-  	border-color: transparent;
+  	border: 1px solid transparent;
     border-radius: 4px;
     min-width: 4px;
-	margin-top: 2px;
-	margin-bottom: 2px;
 }
 
 .light_scrollbar slider:hover {
  	background-color: rgba(16, 16, 16, 0.7);
  	box-shadow: none;
- 	border: 1px;
- 	border-color: transparent;
-    border-radius: 4px;
+ 	border: 1px solid transparent;
+ 	border-radius: 5px;
     min-width: 8px;
-	margin-top: 2px;
-	margin-bottom: 2px;
 }
 
 .light_scrollbar slider:hover:active {
  	background-color: rgba(16, 16, 16, 0.8);
  	box-shadow: none;
- 	border: 1px;
- 	border-color: transparent;
-    border-radius: 4px;
+ 	border: 1px solid transparent;
+    border-radius: 5px;
     min-width: 8px;
-	margin-top: 2px;
-	margin-bottom: 2px;
 }
 
 .switcher_scrollbar {
